# metaso-sse

./: AGENTS.md  Makefile  README.md  mcp-sse.py  pyproject.toml  requirements.txt  serve.py
scripts/: prune_package.py
src/metaso_mcp/: __init__.py  app.py
src/metaso_mcp/clients/: __init__.py  metaso.py
src/metaso_mcp/core/: settings.py
src/metaso_mcp/tools/: __init__.py  search.py
